Creacion de Gestion de Turnos y vista con Filtro de Turnos

--- a/inicio/templates/inicio/home.html
+++ b/inicio/templates/inicio/home.html
@@ -2,6 +2,7 @@
 
 <ul>
     <li><a href="{% url 'turnos:lista_turnos' %}">Turnos Medicos</a></li>
+    <li><a href="{% url 'turnos:crear_turno' %}">Gestionar Turno</a></li>
     <li><a href="{% url 'turnos:gestionar_medicos' %}">Gestionar Medicos</a></li>
     <li><a href="{% url 'turnos:gestionar_especialidades' %}">Gestionar Especialidades</a></li>
     <li><a href="{% url 'turnos:gestionar_pacientes' %}">Gestionar Pacientes</a></li>
