--- a/inicio/templates/inicio/editar_clinica.html
+++ b/inicio/templates/inicio/editar_clinica.html
@@ -1,27 +1,18 @@
 {% extends "inicio/base.html" %}
-{% load static %}
 
-{% block title %}Editar Perfil | Gestión de Turnos{% endblock %}
+{% block title %}Editar Nuestra Clínica | Gestión de Turnos{% endblock %}
 
-{% block auth %}
-
-{% endblock %}
+{% block auth %}{% endblock %}
 
 {% block content %}
-<div class="card" style="max-width: 520px; margin: 0 auto;">
-
-    <h2 style="text-align:center; margin-bottom:20px;">
-        Editar Perfil
-    </h2>
-
+<div class="card" style="max-width: 520px; margin: 20px auto; padding: 20px;">
+    <h2 style="text-align:center; margin-bottom:20px;">Editar Nuestra Clínica</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-
         <button type="submit" class="btn" style="width:100%; margin-top:10px;">
             Guardar cambios
         </button>
     </form>
-
 </div>
 {% endblock %}
