actualizacion de app Turnos_V2

--- a/inicio/templates/inicio/editar_clinica.html
+++ b/inicio/templates/inicio/editar_clinica.html
@@ -1,6 +1,6 @@
 {% extends "inicio/base.html" %}
 
-{% block title %}Editar Nuestra Clínica | Gestión de Turnos{% endblock %}
+{% block title %}Editar Nuestra Clínica{% endblock %}
 
 {% block auth %}{% endblock %}
 
