--- a/inicio/templates/inicio/login.html
+++ b/inicio/templates/inicio/login.html
@@ -1,10 +1,10 @@
 {% extends "inicio/base.html" %}
 {% load static %}
 
-{% block title %}Iniciar sesión | Gestión de Turnos{% endblock %}
+{% block title %}Iniciar sesión{% endblock %}
 
 {% block auth %}
-{# En login NO mostramos botones de login/register #}
+
 {% endblock %}
 
 {% block content %}
