--- a/inicio/templates/inicio/password_change.html
+++ b/inicio/templates/inicio/password_change.html
@@ -1,7 +1,7 @@
 {% extends "inicio/base.html" %}
 {% load static %}
 
-{% block title %}Cambiar Contraseña | Gestión de Turnos{% endblock %}
+{% block title %}Cambiar Contraseña{% endblock %}
 
 {% block auth %}
 
