--- a/inicio/templates/inicio/perfil.html
+++ b/inicio/templates/inicio/perfil.html
@@ -1,7 +1,7 @@
 {% extends "inicio/base.html" %}
 {% load static %}
 
-{% block title %}Editar Perfil | Gestión de Turnos{% endblock %}
+{% block title %}Editar Perfil{% endblock %}
 
 {% block auth %}
 
