--- a/inicio/templates/inicio/signup.html
+++ b/inicio/templates/inicio/signup.html
@@ -1,7 +1,7 @@
 {% extends "inicio/base.html" %}
 {% load static %}
 
-{% block title %}Registro | Gestión de Turnos{% endblock %}
+{% block title %}Registro{% endblock %}
 
 {% block auth %}
 
