--- a/inicio/templates/inicio/home.html
+++ b/inicio/templates/inicio/home.html
@@ -1,6 +1,6 @@
 {% extends "inicio/base.html" %}
 {% load static %}
-{% block title %}Inicio | Gestión de Turnos{% endblock %}
+{% block title %}Inicio{% endblock %}
 
 {% block content %}
 <section class="menu-wrapper">
